--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-@import url(//fonts.googleapis.com/css?family=bebas+neue);
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+body{
+   font-family: "Bebas Neue";
+}
 
 header div{
 
